--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Ubuntu";
   outline: none;
+}
+body {
+  margin: 0;
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
 }
 a,
 a:visited,
@@ -58,12 +62,21 @@ h2 {
 
 .main {
   display: flex;
+  flex-wrap: wrap;
   margin: 0 auto;
   padding-top: 40px;
   max-width: 1200px;
 }
+
+/* DATA */
+
 .data {
-  width: 50%;
+  width: 45%;
+  min-width: 550px;
+  margin: 0 auto;
+  margin-top: 42px;
+  padding: 25px;
+  box-shadow: 0px 1.5px 20px 0 rgba(1, 0, 42, 0.1);
 }
 .data .regular-income,
 .data .choose-expenses,
@@ -72,7 +85,7 @@ h2 {
 .data .choose-income-label {
   margin: 13px 0px;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 18px;
   color: #262626;
   text-align: center;
 }
@@ -90,7 +103,7 @@ h2 {
   border: none;
   padding-left: 10px;
   margin-bottom: 10px;
-  font-size: 14px;
+  font-size: 16px;
   color: #a7a7a7;
 }
 .data .income-item::placeholder,
@@ -99,7 +112,7 @@ h2 {
 .data .choose-income::placeholder,
 .data .choose-sum::placeholder,
 .data .choose-percent::placeholder {
-  opacity: 0.3;
+  opacity: 0.7;
 }
 .data .expenses-item-btn,
 .data .optionalexpenses-btn,
@@ -162,8 +175,13 @@ h2 {
   font-size: 18px;
   font-weight: 100;
 }
+
+/* RESULT */
+
 .result {
-  width: 50%;
+  width: 45%;
+  min-width: 550px;
+  margin: 0 auto;
 }
 .result-table {
   display: flex;
