--- a/css/style.css
+++ b/css/style.css
@@ -162,8 +162,7 @@ h2 {
   margin: 0 auto;
   border: none;
   border-radius: 2.5px;
-  background-image: linear-gradient(336deg, #ffbd75, #ff964b),
-    linear-gradient(#ffffff, #ffffff);
+  background: linear-gradient(45deg, #f5faf8, #02885b);
   box-shadow: 0px 2.5px 10px 0 rgba(1, 0, 42, 0.1);
   color: #fff;
   font-weight: 100;
@@ -174,6 +173,9 @@ h2 {
   margin-top: 30px;
   font-size: 18px;
   font-weight: 100;
+}
+.data .start:hover {
+  background: #02885b;
 }
 
 /* RESULT */
@@ -225,7 +227,7 @@ h2 {
 .result-table .income-value,
 .result-table .monthsavings-value,
 .result-table .yearsavings-value {
-  color: #61a654;
+  color: #02885b;
   word-break: break-word;
 }
 .result .time-data {
